--- a/src/Eccube/Resource/template/admin/Schedule/bus.twig
+++ b/src/Eccube/Resource/template/admin/Schedule/bus.twig
@@ -64,6 +64,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                     <div id="detail_box__body" class="box-body">
                         {{ form_row(form.bus_no) }}
                         {{ form_row(form.Customer) }}
+                        {{ form_row(form.Route) }}
                     </div><!-- /.box-body -->
                 </div><!-- /.box -->
 
